--- a/UsersApp/appsettings.json
+++ b/UsersApp/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "MyHttpEndpoint": {
-        "Url": "http://localhost:7073"
+        "Url": "https://localhost:7283"
       }
     }
   }
